コードのレビューをお願いいたします。

--- a/js-easy/datyoclub/index.html
+++ b/js-easy/datyoclub/index.html
@@ -8,13 +8,14 @@
 </head>
 
 <body>
-    <h1>ダチョウ倶楽部ゲーム</h1>
+    <!-- <h1>ダチョウ倶楽部ゲーム</h1>
     <button onclick="cntUp()">俺がやる!!!</button>
-    <button onclick="reply()">どうぞどうぞぉ～</button>
+    <button onclick="reply()">どうぞどうぞぉ～</button> -->
+
 
     <!-- チャレンジ問題 -->
 
-    <!-- <button onclick="cntDown()">俺はやらない!!!</button> -->
+    <button onclick="cntDown()"></button>
 
     <!-- チャレンジ問題 ここまで -->
     <script src="./main.js"></script>
