--- a/markup/responsive/index.html
+++ b/markup/responsive/index.html
@@ -116,7 +116,7 @@
                         <div class="news-content">
                             <p class="news-content__day">2019/7/21</p>
                             <h3 class="news-content__title">タイトルが入ります。タイトルが入ります。</h3>
-                            <p class="news-content__intro">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                            <p class="news-content__news-content__dayintro">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                         </div>
                     </div>
                     <div class="news-item">
