レビューをお願いいたします

--- a/js-easy/datyoclub/index.html
+++ b/js-easy/datyoclub/index.html
@@ -8,16 +8,17 @@
 </head>
 
 <body>
-    <!-- <h1>ダチョウ倶楽部ゲーム</h1>
-    <button onclick="cntUp()">俺がやる!!!</button>
-    <button onclick="reply()">どうぞどうぞぉ～</button> -->
+    <h1>ダチョウ倶楽部ゲーム</h1>
+    <button id="cntDown">俺がやる!!!</button>
+    <button id="reply">どうぞどうぞぉ～</button>
 
 
     <!-- チャレンジ問題 -->
 
-    <button onclick="cntDown()"></button>
+    <!-- <button onclick="cntDown()"></button> -->
 
     <!-- チャレンジ問題 ここまで -->
     <script src="./main.js"></script>
+</body>
 
 </html>
