--- a/js-easy/saitosan/index.html
+++ b/js-easy/saitosan/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>斎藤さんゲーム</h1>
-  <button onclick="setBtn()">
+  <button id="setBtn">
     押してね
   </button>
   <script src="/main.js"></script>
