--- a/js-normal/hit-timer/index 追加チャレンジ問題.html
+++ b/js-normal/hit-timer/index 追加チャレンジ問題.html
@@ -9,18 +9,18 @@
 
 <body>
     <form>
-        <p>3秒ジャストで止めてね</p>
+        <!-- <p>3秒ジャストで止めてね</p>
         <input type="button" id="confirmTime" value="確認">
-        <input type="button" id="startTimer" value="スタート"></input>
+        <input type="button" id="startTimer" value="スタート"></input> -->
         <!-- 追加チャレンジ問題 -->
 
-        <!-- <input type="button" id="confirmTime2" value="確認">
-        <input type="button" id="startTimer2" value="スタート"></input> -->
+        <input type="button" id="confirmTime2" value="確認">
+        <input type="button" id="startTimer2" value="スタート">
 
         <!-- 追加チャレンジ問題 ここまで -->
-      </form>
+    </form>
     <p id="now_time"></p>
-    <script src="./main.js"></script>
+    <script src="./main-追加チャレンジ問題.js"></script>
 </body>
 
 </html>
