--- a/js-easy/fizzbuzz/index.html
+++ b/js-easy/fizzbuzz/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- チャレンジ問題 -->
-  <!-- <button onclick="rewriteCntUp()">カウントアップ</button>
+  <!-- <button>カウントアップ</button>
   <p id="rewriteNum"></p> -->
   <!-- チャレンジ問題ここまで -->
 
@@ -18,10 +18,10 @@
 
   <h1>FizzbBuzzゲーム</h1>
   <p id="showNum"></p>
-  <button onclick="fizzBtn()">fizz</button>
-  <button onclick="buzzBtn()">buzz</button>
-  <button onclick="fizzbuzzBtn()">fizzbuzz</button>
-  <button onclick="numBtn()" class="last-btn">Number</button>
+  <button id="fizzBtn">fizz</button>
+  <button id="buzzBtn">buzz</button>
+  <button id="fizzbuzzBtn">fizzbuzz</button>
+  <button id="numBtn" class="last-btn">Number</button>
 
   <!-- 追加チャレンジ問題 ここまで -->
   <script src="./main.js"></script>
