Todoリストのご確認をお願いいたします

--- a/js-hard/ToDo/index.html
+++ b/js-hard/ToDo/index.html
@@ -21,7 +21,7 @@
     <ul class="lists" id="todo">
     </ul>
   </div>
-  <script src="main.js"></script>
+  <script src="main 追加チャレンジ.js"></script>
 </body>
 
 </html>
